# quantum-computing

./: README.md  main.py  pyproject.toml
tutorial-1/: exercise.ipynb
tutorial-1/.ipynb_checkpoints/: t1nb1-checkpoint.ipynb
